# gemini-cli-webui

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: make.bat
docs/source/: api.rst  conf.py  index.rst  intro.rst  readme_link.rst
src/gwebui/: __init__.py  app.py  main.py  tools.py
tests/: conftest.py  test_app.py  test_main.py  test_tools.py  test_utils.py
